Creation of the item class and the Gold class

--- a/Task 1 Retry/Task 1 Retry.csproj
+++ b/Task 1 Retry/Task 1 Retry.csproj
@@ -55,7 +55,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GameEngine.cs" />
+    <Compile Include="Gold.cs" />
     <Compile Include="Hero.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
