--- a/Task 1 Retry/Task 1 Retry.csproj
+++ b/Task 1 Retry/Task 1 Retry.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Gold.cs" />
     <Compile Include="Hero.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="Mage.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
